; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_948.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_948.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"Usage:\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [77 x i8] c"%s <-fi:SRC-IP> <-ti:VICTIM-IP> <-fi:SRC-PORT> [-tp:int] [-a:int] [-n:int]\0A\0A\00", align 1
@.str.2 = private unnamed_addr constant [43 x i8] c"       -fi:IP    From (sender) IP address\0A\00", align 1
@.str.3 = private unnamed_addr constant [41 x i8] c"       -ti:IP    To (target) IP address\0A\00", align 1
@.str.4 = private unnamed_addr constant [46 x i8] c"       -fp:int   Target open TCP port number\0A\00", align 1
@.str.5 = private unnamed_addr constant [45 x i8] c"                 (for example - 21, 25, 80)\0A\00", align 1
@.str.6 = private unnamed_addr constant [72 x i8] c"       -tp:int   Inicial value for bruteforce (sender) TCP port number\0A\00", align 1
@.str.7 = private unnamed_addr constant [56 x i8] c"                 (default: 0 = range of ports 0-65535)\0A\00", align 1
@.str.8 = private unnamed_addr constant [37 x i8] c"       -n:int    Number of packets\0A\0A\00", align 1
@.str.9 = private unnamed_addr constant [32 x i8] c"       -a:int    ICMP attacks:\0A\00", align 1
@.str.10 = private unnamed_addr constant [55 x i8] c"                    1 - Blind connection-reset attack\0A\00", align 1
@.str.11 = private unnamed_addr constant [53 x i8] c"                        (ICMP protocol unreachable)\0A\00", align 1
@.str.12 = private unnamed_addr constant [51 x i8] c"                    2 - Path MTU discovery attack\0A\00", align 1
@.str.13 = private unnamed_addr constant [59 x i8] c"                        (slow down the transmission rate)\0A\00", align 1
@.str.14 = private unnamed_addr constant [51 x i8] c"                    3 - ICMP Source Quench attack\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str.1, i64 0, i64 0), i8* %4)
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.4, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([72 x i8], [72 x i8]* @.str.6, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.7, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.8, i64 0, i64 0))
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.9, i64 0, i64 0))
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.10, i64 0, i64 0))
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.11, i64 0, i64 0))
  %16 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.12, i64 0, i64 0))
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.13, i64 0, i64 0))
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.14, i64 0, i64 0))
  %19 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
